# moveit_serialization

./: .clang-format  CMakeLists.txt  README.md  package.xml
include/moveit_serialization/ryml/: conversions.h  ryml.h
include/moveit_serialization/ryml/geometry_msgs/: pose_stamped.h  quaternion.h  transform.h  transform_stamped.h
include/moveit_serialization/ryml/moveit_msgs/: allowed_collision_entry.h  allowed_collision_matrix.h  cartesian_point.h  collision_object.h  joint_constraint.h  link_padding.h  object_color.h  orientation_constraint.h  position_constraint.h  workspace_parameters.h
include/moveit_serialization/ryml/octomap_msgs/: octomap.h  octomap_with_pose.h
include/moveit_serialization/ryml/ros/: duration.h  time.h
include/moveit_serialization/ryml/shape_msgs/: mesh.h  plane.h  solid_primitive.h
include/moveit_serialization/yaml-cpp/: node_manipulation.h  yaml.h
serialization/: CMakeLists.txt  package.xml
serialization/ext/ryml/samples/find_package/: run.sh
serialization/ext/ryml/src/c4/yml/: tree.cpp  tree.hpp
serialization/ext/ryml/src/c4/yml/std/: vector.hpp
serialization/include/moveit_serialization/ryml/: error_handler.h  format.h  ryml.h  std.h  utils.h
serialization/include/moveit_serialization/ryml/geometry_msgs/: accel.h  point.h  pose.h  pose_stamped.h  quaternion.h  transform.h  transform_stamped.h  twist.h  vector3.h  wrench.h
serialization/include/moveit_serialization/ryml/moveit/collision_detection/: collision_request.h
serialization/include/moveit_serialization/ryml/moveit_msgs/: allowed_collision_entry.h  allowed_collision_matrix.h  attached_collision_object.h  bounding_volume.h  cartesian_point.h  cartesian_trajectory.h  cartesian_trajectory_point.h  collision_object.h  constraints.h  generic_trajectory.h  joint_constraint.h  link_padding.h  link_scale.h  motion_plan_request.h  object_color.h  orientation_constraint.h  planning_scene.h  planning_scene_world.h  position_constraint.h  robot_state.h  robot_trajectory.h  trajectory_constraints.h  visibility_constraint.h  workspace_parameters.h
serialization/include/moveit_serialization/ryml/object_recognition_msgs/: object_type.h
serialization/include/moveit_serialization/ryml/octomap_msgs/: octomap.h  octomap_with_pose.h
serialization/include/moveit_serialization/ryml/ros/: duration.h  time.h
serialization/include/moveit_serialization/ryml/sensor_msgs/: joint_state.h  multidof_joint_state.h
serialization/include/moveit_serialization/ryml/shape_msgs/: mesh.h  mesh_triangle.h  plane.h  solid_primitive.h
serialization/include/moveit_serialization/ryml/std/: std.h
serialization/include/moveit_serialization/ryml/std_msgs/: color_rgba.h  header.h
serialization/include/moveit_serialization/ryml/trajectory_msgs/: joint_trajectory.h  joint_trajectory_point.h  multidof_joint_trajectory.h  multidof_joint_trajectory_point.h
serialization/include/moveit_serialization/ryml/xmlrpc/: xmlrpc.h
serialization/include/moveit_serialization/yaml-cpp/: node_manipulation.h
serialization/include/moveit_serialization/yaml-cpp/conversion/: collision_detection.h  conversion.h  geometry_msgs.h  moveit_msgs.h  object_recognition_msgs.h  octomap_msgs.h  ros.h  sensor_msgs.h  shape_msgs.h  std_msgs.h  trajectory_msgs.h  utilities.h
serialization/src/: example.cpp
serialization/src/ryml/: error_handler.cpp  utils.cpp
serialization/src/ryml/geometry_msgs/: accel.cpp  point.cpp  pose.cpp  pose_stamped.cpp  quaternion.cpp  transform.cpp  transform_stamped.cpp  twist.cpp  vector3.cpp  wrench.cpp
serialization/src/ryml/moveit/collision_detection/: collision_request.cpp
serialization/src/ryml/moveit_msgs/: allowed_collision_entry.cpp  allowed_collision_matrix.cpp  attached_collision_object.cpp  bounding_volume.cpp  cartesian_point.cpp  cartesian_trajectory.cpp  cartesian_trajectory_point.cpp  collision_object.cpp  constraints.cpp  generic_trajectory.cpp  joint_constraint.cpp  link_padding.cpp  link_scale.cpp  motion_plan_request.cpp  object_color.cpp  orientation_constraint.cpp  planning_scene.cpp  planning_scene_world.cpp  position_constraint.cpp  robot_state.cpp  robot_trajectory.cpp  trajectory_constraints.cpp  visibility_constraint.cpp  workspace_parameters.cpp
serialization/src/ryml/object_recognition_msgs/: object_type.cpp
serialization/src/ryml/octomap_msgs/: octomap.cpp  octomap_with_pose.cpp
serialization/src/ryml/ros/: duration.cpp  time.cpp
serialization/src/ryml/sensor_msgs/: joint_state.cpp  multidof_joint_state.cpp
serialization/src/ryml/shape_msgs/: mesh.cpp  mesh_triangle.cpp  plane.cpp  solid_primitive.cpp
serialization/src/ryml/std_msgs/: color_rgba.cpp  header.cpp
serialization/src/ryml/trajectory_msgs/: joint_trajectory.cpp  joint_trajectory_point.cpp  multidof_joint_trajectory.cpp  multidof_joint_trajectory_point.cpp
serialization/src/ryml/xmlrpc/: xmlrpc.cpp
serialization/src/yaml-cpp/: node_manipulation.cpp
serialization/src/yaml-cpp/conversion/: collision_detection.cpp  geometry_msgs.cpp  moveit_msgs.cpp  object_recognition_msgs.cpp  octomap_msgs.cpp  ros.cpp  sensor_msgs.cpp  shape_msgs.cpp  std_msgs.cpp  trajectory_msgs.cpp  utilities.cpp
src/ryml/: error_handler.cpp
src/ryml/geometry_msgs/: accel.cpp  point.cpp  quaternion.cpp  twist.cpp  wrench.cpp
src/ryml/moveit_msgs/: allowed_collision_matrix.cpp  cartesian_point.cpp  cartesian_trajectory.cpp  cartesian_trajectory_point.cpp  joint_constraint.cpp  motion_plan_request.cpp  orientation_constraint.cpp  planning_scene_world.cpp  position_constraint.cpp  robot_state.cpp  robot_trajectory.cpp
src/ryml/object_recognition_msgs/: object_type.cpp
src/ryml/octomap_msgs/: octomap_with_pose.cpp
src/ryml/ros/: duration.cpp
src/ryml/sensor_msgs/: joint_state.cpp  multidof_joint_state.cpp
src/ryml/shape_msgs/: mesh_triangle.cpp  plane.cpp  solid_primitive.cpp
src/ryml/std_msgs/: color_rgba.cpp
src/yaml-cpp/conversion/: collision_detection.cpp  geometry_msgs.cpp  moveit_msgs.cpp  sensor_msgs.cpp  shape_msgs.cpp  std_msgs.cpp
yaml-cpp/: CMakeLists.txt  README.md  package.xml
(+13 files in other folders)
