<package format="2">
	<name>moveit_serialization_yamlcpp</name>
	<version>0.0.0</version>
	<description>Minimal examples for debugginf MoveIt</description>

	<license>BSD</license>
	<maintainer email="captain.yoshisaur@gmail.com">Captain Yoshi</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

</package>
